--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git://github.com/frlinw/restinfront.git"
+    "url": "git://github.com/madmoizo/restinfront.git"
   },
   "keywords": [
     "model",
