--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "restinfront",
-  "version": "1.2.4",
+  "version": "2.0.0",
   "description": "Model based REST Api Manager",
   "author": "Matthieu Dambrune <matthieu.dambrune@gmail.com>",
   "license": "ISC",
@@ -18,7 +18,7 @@
     "transform"
   ],
   "scripts": {
-    "lint": "eslint --fix lib/**/*.js"
+    "lint": "eslint --fix src/**/*.js"
   },
   "main": "index.js",
   "module": "index.js",
