--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "lint": "eslint --fix src/**/*.js",
     "postversion": "git push && git push --follow-tags"
   },
-  "dependencies": {
-    "utililib": "github:madmoizo/utililib"
-  },
   "devDependencies": {
     "eslint": "^8.16.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0"
+  },
+  "dependencies": {
+    "utililib": "^1.3.0"
   }
 }
