--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,16 @@
 {
-    "extends": [
-      "standard"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 2022,
-      "sourceType": "module"
-    },
-    "rules": {
-      "no-multiple-empty-lines": "off",
-      "quote-props": [
-        1,
-        "consistent"
-      ]
-    },
-    "env": {
-      "browser": true
-    }
+  "extends": [
+    "standard"
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2022,
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-multiple-empty-lines": "off",
+    "quote-props": [1, "consistent"]
+  },
+  "env": {
+    "browser": true
   }
-  
+}
